fix: adjust positioning of extreme heat info for better visibility

--- a/static/extremeheat/page1/style.css
+++ b/static/extremeheat/page1/style.css
@@ -1003,7 +1003,7 @@
 }
 
 #ehibigger{
-  top: 19px;
+  top: 10px !important;
   position: absolute;
   width: 150px;
   left: 11px;
